Fixed webkit appearance on search box. Shifted bkp for overlay to L.

--- a/css/style.css
+++ b/css/style.css
@@ -54,7 +54,10 @@ input[type='search'],
   font-size: .875rem;
   padding: 10px;
   border: 2px solid #BBB;
-  border-radius: 4px; }
+  border-radius: 4px;
+  -webkit-appearance: none;
+     -moz-appearance: none;
+          appearance: none; }
 
 @media screen and (max-width: 768px) {
   input[type='search'] {
@@ -159,10 +162,10 @@ li.gallery-item {
   max-width: 960px;
   padding: 50px;
   background-color: #FFF; }
-  @media screen and (max-width: 480px) {
+  @media screen and (max-width: 1024px) {
     #js-overlay-wrapper {
       min-height: 100%; } }
-  @media screen and (min-width: 768px) {
+  @media screen and (min-width: 1024px) {
     #js-overlay-wrapper {
       top: 15%;
       left: 50%;
@@ -195,8 +198,8 @@ li.gallery-item {
   #js-data-wrapper p {
     margin: 0 0 5px 0; }
   #js-data-wrapper .meta {
-    color: #BBB;
-    margin-bottom: 30px; }
+    margin-bottom: 30px;
+    color: #BBB; }
   #js-data-wrapper .play-list {
     padding: 25px 0 0 0; }
   #js-data-wrapper .album-track {
