--- a/sass/_modules.scss
+++ b/sass/_modules.scss
@@ -22,6 +22,7 @@ input[type='search'],
     padding: 10px;
     border: 2px solid $color-gray;
     border-radius: 4px;
+    appearance: none;
 }
 
 input[type='search'] {
@@ -151,10 +152,10 @@ li.gallery-item {
     max-width: 960px;
     padding: 50px;
     background-color: $color-white;
-    @media screen and (max-width: #{$bkp-s}) {
+    @media screen and (max-width: #{$bkp-l}) {
         min-height: 100%;
     }
-    @media screen and (min-width: #{$bkp-m}) {
+    @media screen and (min-width: #{$bkp-l}) {
         top: 15%;
         left: 50%;
         margin-bottom: 120px;
@@ -192,8 +193,8 @@ li.gallery-item {
         margin: 0 0 5px 0;
     }
     .meta {
-        color: $color-gray;
         margin-bottom: 30px;
+        color: $color-gray;
     }
     .play-list {
         padding: 25px 0 0 0;
